--- a/app/src/main/res/layout/activity_audio_input.xml
+++ b/app/src/main/res/layout/activity_audio_input.xml
@@ -25,6 +25,7 @@
 
 
     <ImageView
+        android:id="@+id/audio_image"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginLeft="100dp"
@@ -33,8 +34,20 @@
 
     </ImageView>
 
+    <ImageView
+        android:id="@+id/mute_image"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="250dp"
+        android:src="@drawable/mutebtn"
+        android:visibility="gone">
+
+
+    </ImageView>
+
     <TextView
-        android:id="@+id/TaoIconText"
+        android:id="@+id/BeginText"
         android:layout_width="294dp"
         android:layout_height="60dp"
         android:layout_alignParentTop="true"
@@ -46,5 +59,20 @@
         android:text="Tap on the icon to begin"
         android:textSize="20sp"
         android:textStyle="bold|italic" />
+
+    <TextView
+        android:id="@+id/MutText"
+        android:layout_width="294dp"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="556dp"
+        android:layout_marginEnd="2dp"
+        android:accessibilityLiveRegion="polite"
+        android:text="Tap on the icon to Stop"
+        android:textSize="20sp"
+        android:textStyle="bold|italic"
+        android:visibility="gone"/>
 
 </RelativeLayout>
