--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -88,5 +88,21 @@
         android:textStyle="bold" />
 
 
+    <Button
+        android:id="@+id/create_batch"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="246dp"
+        android:background="@color/cardview_dark_background"
+        android:layout_height="68dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="470dp"
+        android:layout_marginBottom="8dp"
+        android:text="Create Batch"
+        android:textStyle="bold" />
+
+
 
 </RelativeLayout>
