--- a/app/src/main/res/layout/activity_create_batch.xml
+++ b/app/src/main/res/layout/activity_create_batch.xml
@@ -44,7 +44,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/class_create_btn"
+        android:id="@+id/batch_create_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
