--- a/app/src/main/res/layout/activity_create_class.xml
+++ b/app/src/main/res/layout/activity_create_class.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="200dp">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ctext"
+            android:id="@+id/create_batch_batch_code"
             android:layout_width="312dp"
             android:layout_height="wrap_content"
 
