--- a/app/src/main/res/layout/layout_itme.xml
+++ b/app/src/main/res/layout/layout_itme.xml
@@ -2,21 +2,22 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    android:layout_margin="5dp"
+    android:id="@+id/bathch_list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="5dp"
+    android:layout_margin="5dp"
     android:padding="10dp"
-    >
+    app:cardElevation="5dp">
+
     <TextView
-        android:text="Sumon"
-        android:textSize="30dp"
-        android:padding="10dp"
-        android:textColor="@color/cardview_dark_background"
+        android:id="@+id/bathc_list_batch_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="Sumon"
         android:textAlignment="center"
-        android:id="@+id/bathch_list_item">
+        android:textColor="@color/cardview_dark_background"
+        android:textSize="30dp">
 
     </TextView>
 </androidx.cardview.widget.CardView>
