--- a/app/src/main/res/layout/activity_attendence.xml
+++ b/app/src/main/res/layout/activity_attendence.xml
@@ -19,7 +19,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="-22dp"
         android:accessibilityLiveRegion="polite"
-        android:text="Taking Sample"
+        android:text="Taking Attendance"
         android:textSize="20sp"
         android:textStyle="bold|italic" />
 
