--- a/app/src/main/res/layout/activity_create_course.xml
+++ b/app/src/main/res/layout/activity_create_course.xml
@@ -14,48 +14,31 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="200dp">
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="-1dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/batch_code"
             android:layout_width="312dp"
             android:layout_height="wrap_content"
 
-            android:hint="Batch No." />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/NoOfStdnt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="50dp"
-        android:layout_marginRight="50dp"
-        android:layout_marginTop="300dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/create_batch_student_number"
-            android:layout_width="314dp"
-            android:layout_height="match_parent"
-            android:hint="Number of Students"
-            android:inputType="textPassword"
-            tools:ignore="TextContrastCheck" />
+            android:hint="Course Code" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/batch_create_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:onClick="btnPressed"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="147dp"
         android:layout_marginEnd="49dp"
         android:layout_marginBottom="218dp"
         android:backgroundTint="#5C3F3F"
-        android:text="Create Batch" />
+        android:text="Create Course" />
 
 
     <LinearLayout
