--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,6 @@
         android:id="@+id/create_class"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="246dp"
-        android:background="@color/cardview_dark_background"
         android:layout_height="68dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
@@ -84,7 +83,8 @@
         android:layout_marginStart="84dp"
         android:layout_marginTop="390dp"
         android:layout_marginBottom="8dp"
-        android:text="Create Class"
+        android:background="@color/cardview_dark_background"
+        android:text="Create Course"
         android:textStyle="bold" />
 
 
